mock-exams/topic-wise/ServicesAndNetworking/network-policies/NetworkPolicy/q6/api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-policy
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: backend
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: services
    - from:
      - podSelector:
          matchLabels:
            role: admin
